Fix: do not show extra scrollbar on scenario screen when panel to large

--- a/designer/client/stylesheets/visualization.styl
+++ b/designer/client/stylesheets/visualization.styl
@@ -3,7 +3,7 @@
 
 .Page
   position: relative
-  overflow-x: hidden
+  overflow: hidden
   height 100%
   display flex
   flex-direction column
